--- a/lk-dobavit-kompanyu.html
+++ b/lk-dobavit-kompanyu.html
@@ -145,7 +145,7 @@
                     <div class="container">
                         <div class="lk-header__mobile-content">
                             <a href="./lk-vladelec-biznesa.html" class="back-btn lk-header__mobile-back"></a>
-                            <div class="lk-header__mobile-title">Привлечение инвестиций</div>
+                            <div class="mobile-title lk-header__mobile-title">Привлечение инвестиций</div>
                         </div>
                     </div>
                 </div>
