--- a/lk-forma-podpisaniya-dogovora.html
+++ b/lk-forma-podpisaniya-dogovora.html
@@ -152,7 +152,7 @@
                     <div class="container">
                         <div class="lk-header__mobile-content">
                             <a href="./lk-spisok-sdelok.html" class="back-btn"></a>
-                            <div class="lk-header__mobile-title">Форма подписания договора</div>
+                            <div class="mobile-title lk-header__mobile-title">Форма подписания договора</div>
                         </div>
                     </div>
                 </div>
