--- a/lk-vladelec-sozdanie-sdelki-2.html
+++ b/lk-vladelec-sozdanie-sdelki-2.html
@@ -149,7 +149,7 @@
                     <div class="container">
                         <div class="lk-header__mobile-content">
                             <a href="./lk-vladelec-sozdanie-sdelki-1.html" class="back-btn"></a>
-                            <div class="lk-header__mobile-title">Компания заемщик</div>
+                            <div class="mobile-title lk-header__mobile-title">Компания заемщик</div>
                         </div>
                     </div>
                 </div>
