--- a/lk-zayavka.html
+++ b/lk-zayavka.html
@@ -163,7 +163,7 @@
                     <div class="container">
                         <div class="lk-header__mobile-content">
                             <a href="./lk-spisok-sdelok.html" class="back-btn"></a>
-                            <div class="lk-header__mobile-title">Металлсервис</div>
+                            <div class="mobile-title lk-header__mobile-title">Металлсервис</div>
                             <button class="open-add-menu open-add-menu_discuss"></button>
                         </div>
                     </div>
@@ -661,7 +661,10 @@
                                             </div>
                                         </div>
                                         <div class="add-menu">
-                                            <div class="back-btn close-add-menu add-menu__close"></div>
+                                            <div class="add-menu__header">
+                                                <div class="mobile-title">Дискуссия</div>
+                                                <button class="close-btn close-add-menu add-menu__close"></button>
+                                            </div>
                                             <div class="discuss-sidebar application__discuss box">
                                                 <div class="discuss-sidebar__header">
                                                     <div class="lk-title3 discuss-sidebar__title">Дискуссия</div>
