--- a/lk-spisok-sdelok.html
+++ b/lk-spisok-sdelok.html
@@ -144,8 +144,8 @@
                 <div class="lk-header__mobile">
                     <div class="container">
                         <div class="lk-header__mobile-content">
-                            <div class="lk-header__mobile-title">Список сделок</div>
-                            <button class="open-filter-btn"></button>
+                            <div class="mobile-title lk-header__mobile-title">Список сделок</div>
+                            <button class="open-add-menu open-add-menu_filter"></button>
                         </div>
                     </div>
                 </div>
@@ -274,20 +274,25 @@
                                     <button class="tab-btn tab-btn_active deals-list__tab-btn">Первичный рынок</button>
                                     <button class="tab-btn deals-list__tab-btn">Вторичный рынок <span class="not-view deals-list__tab-btn-count">1</span></button>
                                 </div>
-                                <div class="filter-menu deals-list__filters">
-                                    <div class="switch filter-menu__switch">
-                                        <div class="switch__text">Активные сделки</div>
-                                        <div class="switch__main">
-                                            <input type="checkbox" name="active-deals" class="switch__field" id="active-deals">
-                                            <label for="active-deals" class="switch__label"></label>
+                                <div class="add-menu deals-list__add-menu">
+                                    <div class="add-menu__header">
+                                        <div class="mobile-title">Фильтр</div>
+                                        <button class="close-btn close-add-menu add-menu__close"></button>
+                                    </div>
+                                    <div class="filter-menu">
+                                        <div class="switch filter-menu__switch">
+                                            <div class="switch__text">Активные сделки</div>
+                                            <div class="switch__main">
+                                                <input type="checkbox" name="active-deals" class="switch__field" id="active-deals">
+                                                <label for="active-deals" class="switch__label"></label>
+                                            </div>
+                                        </div>
+                                        <div class="filter-menu__btns">
+                                            <button class="filter-btn filter-menu__btn">Инструмент</button>
+                                            <button class="filter-btn filter-menu__btn">Цель</button>
+                                            <button class="filter-btn filter-menu__btn">Город</button>
                                         </div>
                                     </div>
-                                    <div class="filter-menu__btns">
-                                        <button class="filter-btn filter-menu__btn">Инструмент</button>
-                                        <button class="filter-btn filter-menu__btn">Цель</button>
-                                        <button class="filter-btn filter-menu__btn">Город</button>
-                                    </div>
-                                    <button class="back-btn close-filter-btn filter-menu__close "></button>
                                 </div>
                             </div>
                             <div class="deals-list__items">
