--- a/lk-vladelec-zagruzka-doc-2.html
+++ b/lk-vladelec-zagruzka-doc-2.html
@@ -152,7 +152,7 @@
                     <div class="container">
                         <div class="lk-header__mobile-content">
                             <a href="./lk-spisok-sdelok.html" class="back-btn"></a>
-                            <div class="lk-header__mobile-title">Документы компании</div>
+                            <div class="mobile-title lk-header__mobile-title">Документы компании</div>
                         </div>
                     </div>
                 </div>
@@ -168,9 +168,9 @@
                         <div class="request-menu request__menu">
                             <a href="./lk-vladelec-zagruzka-doc.html" class="tab-btn tab-btn_request request-menu__link tab-btn_active">Документы компании</a>
                             <a href="./lk-vladelec-zayavka.html" class="tab-btn tab-btn_request request-menu__link">Заявка</a>
-                            <a href="#" class="tab-btn tab-btn_request request-menu__link">Отчетность</a>
-                            <a href="#" class="tab-btn tab-btn_request request-menu__link">Документы</a>
-                            <a href="#" class="tab-btn tab-btn_request request-menu__link">Договоры</a>
+                            <a href="./lk-vladelec-otchet.html" class="tab-btn tab-btn_request request-menu__link">Отчетность</a>
+                            <a href="./lk-vladelec-docs.html" class="tab-btn tab-btn_request request-menu__link">Документы</a>
+                            <a href="./lk-vladelec-contracts.html" class="tab-btn tab-btn_request request-menu__link">Договоры</a>
                             <a href="#" class="tab-btn tab-btn_request request-menu__link">Публикация</a>
                         </div>
                         <div class="request__main">
